<resources>
    <string name="app_name">Sampoorna</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register new user</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_avoid">Avoid</string>
    <string name="menu_slideshow">Blood</string>
    <string name="nenu_sos">SOS</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Sign in -->
    <string name="signin">Sign in</string>
    <string name="weight">Weight</string>
    <string name="password">Password</string>
    <string name="re_password">Reenter-Password</string>
    <string name="lets_go">Lets Go</string>
    <string name="separator">/</string>
    <string name="dob">DOB : </string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_gallery">Gallery</string>
</resources>
