<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.futurework.sampoorna.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.futurework.sampoorna.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.futurework.sampoorna.ui.avoid.GalleryFragment"
        android:label="@string/menu_avoid"
        tools:layout="@layout/fragment_avoid" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.futurework.sampoorna.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_blood" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>