<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:color="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <Spinner
        android:id="@+id/blood"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center_vertical"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/letsgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_select"
        android:text="@string/lets_go"
        android:textColor="@color/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repassword" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar_today" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginRight="8dp"
            android:text="@string/dob"/>

        <Spinner
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/separator"/>
        <Spinner
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/separator"/>
        <Spinner
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>